2005-05-03  Ulrich Drepper  <drepper@redhat.com>

	[BZ #915]
	* sysdeps/pthread/pthread.h: Avoid empty initializers.

2005-05-03  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h: Remove explicit
	.eh_frame section, use cfi_* directives.

2005-04-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/pthread_getcpuclockid.c: Use <> instead
	of "" includes.

2005-04-27  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel17.c (do_test): Add arbitrary factor to make sure
	aio_write blocks.

2005-04-27  Roland McGrath  <roland@redhat.com>

	* Makefile (tests): Remove tst-clock2.

	* sysdeps/unix/sysv/linux/timer_create.c (timer_create): Handle
	CLOCK_PROCESS_CPUTIME_ID and CLOCK_PROCESS_THREAD_ID specially,
	translating to the kernel clockid_t for our own process/thread clock.

	* sysdeps/unix/sysv/linux/pthread_getcpuclockid.c: New file.

2005-04-15  Jakub Jelinek  <jakub@redhat.com>

	* old_pthread_cond_init.c: Include <errno.h>.
	(__pthread_cond_init_2_0): Fail with EINVAL if COND_ATTR is
	process shared or uses clock other than CLOCK_REALTIME.
	* pthread_cond_init.c (__pthread_cond_init): Remove bogus comment.

2005-04-13  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/jmpbuf-unwind.h: New file.
	* sysdeps/sparc/sparc64/clone.S: New file.

2005-04-05  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/pthread.h (__pthread_cleanup_routine): Use
	__inline instead of inline.
	* sysdeps/pthread/bits/libc-lock.h (__libc_cleanup_routine): Likewise.

2005-03-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_unlock.S: Use
	functionally equivalent, but shorter instructions.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_broadcast.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_rwlock_timedrdlock.S:
	Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_barrier_wait.S: Likewise.